--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -2,7 +2,7 @@ script(type="text/x-template")#reviews-list
   section.reviews#reviews
     .reviews__slider
       .reviews__heading-row
-        h2.title.title--reviews Что обо мне говорят
+        h2.title.title--reviews People talking about me
         .reviews__arrows
           button(type="button" @click="previous()").reviews__btn.reviews__btn--left
             +icon('arrow-down', 'arrow arrow--left')
