--- a/src/templates/components/skills.pug
+++ b/src/templates/components/skills.pug
@@ -2,13 +2,11 @@ script(type="text/x-template")#skills-template
   section.skills#skills
     .container.skills__container
       .skills__content-wrapper
-        h2.title.title--skills.skills__title Чем я могу быть полезен вам
+        h2.title.title--skills.skills__title My stack
         .skills__content
           .skills__content-charts
-            .skills__desc-block
-              span.skills__desc Этот сайт я сделал в рамках обучения в Школе онлайн образования 
-              span.skills__desc LoftSchool. Чуть позже я освежу в нём свой контент. 
-              span.skills__desc А пока посмотрите, как тут всё классно и красиво!
+            //- .skills__desc-block
+            //-   span.skills__desc my stack 
             ul.skills__stack-list
               li.skills__stack-item(v-for="category in categories" :key="category.id")
                 stackRow(
