--- a/src/styles/blocks/stack-row.pcss
+++ b/src/styles/blocks/stack-row.pcss
@@ -1,9 +1,10 @@
 .stack-row__list {
   display: flex;
+  flex-wrap: wrap;
 
-  @include big-phones {
+  /* @include big-phones {
     flex-wrap: wrap;
-  }
+  } */
 }
 
 .stack-row__title {
@@ -17,7 +18,6 @@
 }
 
 .stack-row__item {
-  flex: 1 0 25%;
   display: flex;
   align-items: center;
   justify-content: center;
