--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -2,7 +2,7 @@ script(type="text/x-template")#works-component
   section.works#works
     .container.works__container
       .works__content-wrapper
-        h2.title.title--works.works__title Мои работы
+        h2.title.title--works.works__title My projects
         .works__content
           .works__slider
             ul.works__slider-list
