--- a/src/index.pug
+++ b/src/index.pug
@@ -105,7 +105,7 @@ html(lang="ru")
 
               .hero__btns-block
                 a(href="#personal-info").scroll
-                  span.scroll__text Scroll
+                  //- span.scroll__text Scroll
 
           //- personal-info section
           - var personalInfoTableRows = { "Home:": "Moscow", "Age:": "25" }
