--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -25,7 +25,7 @@
 .skills__content {
   padding-left: 33%;
   background: url("../images/bg/bag.png") 0 0 no-repeat;
-  background-size: contain;
+  /* background-size: contain; */
   min-width: 320px;
 
   @include big-desktop {
@@ -35,6 +35,7 @@
   @include desktop {
     background-position-x: -200px;
     padding-left: 27%;
+    background-size: contain;
   }
 
   @include mini-desktop {
