--- a/src/styles/blocks/stack-row.pcss
+++ b/src/styles/blocks/stack-row.pcss
@@ -1,10 +1,8 @@
 .stack-row__list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 
-  /* @include big-phones {
-    flex-wrap: wrap;
-  } */
 }
 
 .stack-row__title {
