add animation on scroll to skills section

--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -20,6 +20,8 @@
   &--above {
     stroke-width: 15PX;
     stroke-dasharray: 251;
+    stroke-dashoffset: 251;
+    transition: stroke-dashoffset 3s;
   }
 }
 
