--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -20,8 +20,8 @@
   &--above {
     stroke-width: 15PX;
     stroke-dasharray: 251;
-    stroke-dashoffset: 251;
-    transition: stroke-dashoffset 3s;
+    /* stroke-dashoffset: 251; */
+    transition: stroke-dashoffset 2s;
   }
 }
 
