--- a/src/styles/blocks/contacts.pcss
+++ b/src/styles/blocks/contacts.pcss
@@ -11,9 +11,12 @@
 }
 
 .contacts__content {
-  width: 50%;
+  /* width: 50%; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  @include mini-desktop {
+  /* @include mini-desktop {
     width: 65%;
   }
 
@@ -23,7 +26,7 @@
 
   @include tablets {
     width: 100%;
-  }
+  } */
 }
 
 .contacts__form {
