--- a/src/styles/blocks/exp.pcss
+++ b/src/styles/blocks/exp.pcss
@@ -1,4 +1,4 @@
-.review {
+.exp {
   display: flex;
 
 /* quote icon */
@@ -22,13 +22,13 @@
   }
 }
 
-.review__content-block {
+.exp__content-block {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.review__content {
+.exp__content {
   margin: 0;
   margin-bottom: 20px;
   color: rgba(65, 76, 99, 0.5);
@@ -46,13 +46,13 @@
   }
 }
 
-.review__person-info {
+.exp__person-info {
   display: flex;
   align-items: center;
   font-style: normal;
 }
 
-.review__img-wrapper {
+.exp__img-wrapper {
   width: 100px;
   height: 100px;
   margin-right: 20px;
@@ -64,11 +64,11 @@
   }
 }
 
-.review__img {
+.exp__img {
   border-radius: 50%;
 }
 
-.review__name {
+.exp__name {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 5%;
@@ -79,7 +79,7 @@
   }
 }
 
-.review__position {
+.exp__position {
   font-size: 16px;
   font-weight: 600;
   color: rgba(65, 76, 99, 0.3);
