--- a/src/styles/blocks/experience.pcss
+++ b/src/styles/blocks/experience.pcss
@@ -1,4 +1,4 @@
-.reviews {
+.experience {
   width: 72%;
   padding: 15% 0;
 
@@ -23,7 +23,7 @@
   }
 }
 
-.reviews__slider {
+.experience__slider {
 
   width: 100%;
 
@@ -34,7 +34,7 @@
   }
 }
 
-.reviews__heading-row {
+.experience__heading-row {
   display: flex;
   align-items: center;
   margin-bottom: 50px;
@@ -46,7 +46,7 @@
   }
 }
 
-.reviews__arrows {
+.experience__arrows {
   display: flex;
   align-items: center;
 
@@ -56,7 +56,7 @@
   }
 }
 
-.reviews__btn {
+.experience__btn {
   position: relative;
   width: 50px;
   height: 50px;
@@ -101,7 +101,7 @@
   }
 }
 
-.reviews__list {
+.experience__list {
   /* display: flex;
   align-items: stretch; */
   width: 100%;
@@ -114,7 +114,7 @@
   }
 }
 
-.reviews__item {
+.experience__item {
   width: 50%;
 
   @include phones {
