--- a/src/styles/blocks/greeting.pcss
+++ b/src/styles/blocks/greeting.pcss
@@ -5,6 +5,6 @@
   position: relative;
 
   @include less-than-tablets {
-    background-image: url('../images/bg/mountain-baloon.jpg');
+    /* background-image: url('../images/bg/mountain-baloon.jpg'); */
   }
 }
