--- a/src/styles/blocks/personal-info.pcss
+++ b/src/styles/blocks/personal-info.pcss
@@ -23,7 +23,7 @@
 
 .personal-info__content {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 
   @include phones {
     flex-direction: column;
