--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -23,34 +23,34 @@
 }
 
 .skills__content {
-  padding-left: 33%;
-  background: url("../images/bg/bag.png") 0 0 no-repeat;
+  /* padding-left: 33%; */
+  /* background: url("../images/bg/bag.png") 0 0 no-repeat; */
   /* background-size: contain; */
   min-width: 320px;
 
-  @include big-desktop {
+  /* @include big-desktop {
     background-position-x: -10%;
-  }
+  } */
 
-  @include desktop {
+  /* @include desktop {
     background-position-x: -200px;
     padding-left: 27%;
     background-size: contain;
-  }
+  } */
 
   @include mini-desktop {
-    background-position: 56% 100%;
+    /* background-position: 56% 100%;
     padding-bottom: 345px;
-    background-size: auto 35%;
-    padding-left: 0;
+    background-size: auto 35%; */
+    /* padding-left: 0; */
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  @include big-phones {
+  /* @include big-phones {
     background-size: auto 26%;
-  }
+  } */
 
   @include mini-phones {
     overflow-x: auto;
@@ -92,9 +92,9 @@
 }
 
 .skills__stack-list {
-  padding-left: 15%;
-  padding-top: 5%;
-  width: 90%;
+  /* padding-left: 15%;
+  padding-top: 5%; */
+  width: 100%;
 
   @include mini-desktop {
     padding-left: 0;
