--- a/src/styles/blocks/stack-row.pcss
+++ b/src/styles/blocks/stack-row.pcss
@@ -9,10 +9,11 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 2%;
+  text-align: center;
 
-  @include mini-desktop {
+  /* @include mini-desktop {
     text-align: center;
-  }
+  } */
 }
 
 .stack-row__item {
