--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -33,7 +33,6 @@
 
   &--skills {
     text-align: center;
-    font-size: 30px;
     font-weight: bold;
 
     @include tablets {
@@ -53,7 +52,7 @@
     }
   }
 
-  &--reviews {
+  &--experience {
     margin-right: 30px;
 
     @include phones {
@@ -66,9 +65,11 @@
 
   &--contacts {
 
-    @include tablets {
+    text-align: center;
+
+    /* @include tablets {
       text-align: center;
-    }
+    } */
 
   }
 }
