--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -2,7 +2,7 @@ script(type="text/x-template")#works-component
   section.works#works
     .container.works__container
       .works__content-wrapper
-        h2.title.title--works.works__title My projects
+        h2.title.title--works.works__title projects
         .works__content
           .works__slider
             ul.works__slider-list
@@ -62,7 +62,7 @@ script(type="text/x-template")#info-component
       h3.works__desc-title {{currentWork.title}}
       .works__desc-text 
         p {{currentWork.description}}
-    a(:href="currentWork.link" target="_blank").works__link Посмотреть сайт
+    a(:href="currentWork.link" target="_blank").works__link view the project
 
 
 
