--- a/src/templates/entry.pug
+++ b/src/templates/entry.pug
@@ -1,4 +1,4 @@
 include ./components/skills.pug
 include ./components/works.pug
-include ./components/reviews.pug
+include ./components/experience.pug
 include ./components/contacts.pug
