--- a/src/styles/blocks/exp-cont-parallax.pcss
+++ b/src/styles/blocks/exp-cont-parallax.pcss
@@ -1,4 +1,4 @@
-.rev-cont-parallax {
+.exp-cont-parallax {
   position: absolute;
   left: 0;
   top: 0;
@@ -12,7 +12,7 @@
   }
 }
 
-.rev-cont-parallax__layer {
+.exp-cont-parallax__layer {
   position: absolute;
   left: 0;
   top: 0;
@@ -22,7 +22,7 @@
 
   /* sky background */
   &:nth-child(1) {
-    .rev-cont-parallax__image {
+    .exp-cont-parallax__image {
       object-fit: cover;
       width: 100%;
       height: 100%;
@@ -31,7 +31,7 @@
 
   /* mountain */
   &:nth-child(2) {
-    .rev-cont-parallax__image {
+    .exp-cont-parallax__image {
       bottom: -30%;
       width: 100%;
 
@@ -43,7 +43,7 @@
 
   /* budda */
   &:nth-child(3) {
-    .rev-cont-parallax__image {
+    .exp-cont-parallax__image {
       bottom: -20%;
       right: 10%;
       width: 20%;
@@ -60,7 +60,7 @@
 
   /* clouds */
   &:nth-child(4) {
-    .rev-cont-parallax__image {
+    .exp-cont-parallax__image {
       bottom: -60%;
       width: 100%;
 
@@ -76,7 +76,7 @@
 
   /* clouds-1 */
   &:nth-child(5) {
-    .rev-cont-parallax__image {
+    .exp-cont-parallax__image {
       bottom: -60%;
 
       @include desktop {
@@ -91,7 +91,7 @@
 
   /* clouds-2 */
   &:nth-child(6) {
-    .rev-cont-parallax__image {
+    .exp-cont-parallax__image {
       bottom: -60%;
 
       @include desktop {
@@ -105,6 +105,6 @@
   }
 }
 
-.rev-cont-parallax__image {
+.exp-cont-parallax__image {
   position: absolute;
 }
