--- a/src/styles/blocks/experience-contacts-block.pcss
+++ b/src/styles/blocks/experience-contacts-block.pcss
@@ -1,10 +1,7 @@
-.reviews-contacts-block {
+.experience-contacts-block {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-
-  @include less-than-tablets {
-    background-image: url('../images/bg/budda.jpg');
-  }
+  /* background-image: url('../images/bg/budda.jpg'); */
 }
