--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -20,11 +20,22 @@
 
   &--center {
     flex: 1;
-    justify-content: center;
-    padding: 0 20px;
+    justify-content: flex-start;
+    /* padding: 0 20px; */
 
     @include big-tablets {
       display: none;
+    }
+  }
+
+  &--last {
+    @include big-tablets {
+      width: 100%;
+      justify-content: space-between;
+    }
+
+    @include phones {
+      justify-content: flex-end;
     }
   }
 
