add animation to the greeting text

--- a/src/index.pug
+++ b/src/index.pug
@@ -44,8 +44,8 @@ html(lang="ru")
 
                 .header__col.header__col--center
 
-                  - var navItems = ["home", "about me", "skills", "projects", "experience", "contacts"];
-                  - var navAnchors = ["#hero", "#personal-info", "#skills", "#works", "#experience", "#contacts"];
+                  - var navItems = ["home", "about me", "skills", "projects", "contacts"];
+                  - var navAnchors = ["#hero", "#personal-info", "#skills", "#works", "#contacts"];
 
                   nav.nav
                     ul.nav__list
@@ -56,9 +56,9 @@ html(lang="ru")
 
                   .header__col.header__col--right
 
-                    - var socialItems = ['github', 'insta', 'vk'];
+                    - var socialItems = ['telegram', 'github', 'google'];
                     - var socialAriaLabels = ["Go to GitHub", 'Go to Instagram', 'Go to VK'];
-                    - var socialLinks = ["https://github.com/yasevplaton", 'https://www.instagram.com/yasevplaton/', 'https://vk.com/yasevplaton'];
+                    - var socialLinks = ["https://t.me/yasevplaton", 'https://www.github.com/yasevplaton/', 'mailto:yasevplaton@gmail.com'];
 
                     .socials
                       ul.socials__list
@@ -97,7 +97,7 @@ html(lang="ru")
               .hero__greeting-block-wrapper
                 h1.hero__greeting-block
                   .hero__greeting-desc
-                    span.hero__greeting-text web-developer
+                    span.hero__greeting-text Hi, I am a web-developer
                     //- span.hero__greeting-text personal site
                   .hero__greeting-name
                     span.title.title--hero.title--hero-name Platon 
