--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -54,6 +54,11 @@
   fill: $text-color;
   transition: all 0.3s;
 
+  &--contact {
+    width: 50px;
+    height: 50px;
+  }
+
   &--rounded {
     position: absolute;
     top: 50%;
