--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -39,9 +39,9 @@
       font-size: 25px;
     }
 
-    @include phones {
+    /* @include phones {
       text-align: left;
-    }
+    } */
   }
 
   &--works {
