--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -26,7 +26,7 @@
   /* padding-left: 33%; */
   /* background: url("../images/bg/bag.png") 0 0 no-repeat; */
   /* background-size: contain; */
-  min-width: 320px;
+  /* min-width: 320px; */
 
   /* @include big-desktop {
     background-position-x: -10%;
